--- a/style.css
+++ b/style.css
@@ -63,6 +63,13 @@ header a {
     font-size: 16px;
 }
 
+.name {
+    color: #fff;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 25px;
+}
+
 header ul {
     list-style: none;
 }
